Language optimization